<resources>
    <string name="app_name">Personal Restaurant Guide</string>

    <string name="main_restaurant">All Restaurants</string>
    <string name="main_favourites">Favourites</string>
    <string name="main_search">Places to try</string>

    <string name="search_title">Search</string>
    <string name="map_icon_description">Map icon</string>
    <string name="heart_icon_description">Favourite icon</string>

    <string name="about_title">Team Members:</string>
    <string name="diego_name">Diego Fuentes</string>
    <string name="hiu_name">Hiu Wai Lau</string>
    <string name="yang_name">Yang Hai</string>
    <string name="chloe_name">Chloe Zeng</string>
</resources>